[package]
name = "crucible-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "cru"
path = "src/main.rs"

[lib]
doctest = false

[package.metadata.dist]
dist = true


[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/crucible-v{ version }-{ target }.tar.gz"
bin-dir = "crucible-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = ["fastembed", "web"]

# Web UI server (`cru web`) — pulls the crucible-web crate (Axum routes over
# daemon RPC + embedded SolidJS frontend). Disable for a slim CLI build.
web = ["dep:crucible-web"]

# Local embedding support (pulls ONNX Runtime / fastembed via daemon).
# The passthrough here only works because we turn off daemon's defaults on
# the `crucible-daemon` dep below; toggling `--features fastembed` on the
# CLI deterministically toggles fastembed in the daemon half of the `cru`
# binary.
fastembed = ["crucible-daemon/fastembed"]

[dependencies]
crucible-core = { path = "../crucible-core" }


crucible-lua = { path = "../crucible-lua" }

crucible-daemon = { path = "../crucible-daemon", default-features = false }


crucible-oil = { path = "../crucible-oil", default-features = false }

# ACP agent mode: `cru acp` serves the internal agent over the Agent Client
# Protocol on stdio. Feature-matched to crucible-daemon's host-side dependency
# so cargo unifies to one build of the crate.
agent-client-protocol = { version = "0.10.4", features = [
    "unstable_session_model",
    "unstable_session_close",
] }
tokio-util = { version = "0.7", features = ["compat"] }

# Web UI server (`cru web`), optional behind the `web` feature
crucible-web = { workspace = true, optional = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client for provider detection
reqwest = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Table formatting
tabled = "0.21"

# Date/time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Lazy statics
once_cell = "1.21"

# Output formatting
comfy-table = { workspace = true }
colored = { workspace = true }

# Interactive UI
dialoguer = "0.12"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


# File system utilities
walkdir = "2.5"

# Additional dependencies for REPL
regex = { workspace = true }

# Path manipulation
dirs = { workspace = true }
shellexpand = "3.1"

# Unicode width for proper character display width calculation
unicode-width = "0.2"

# Markdown parsing for terminal rendering
markdown-it = { workspace = true }

# Async utilities
futures = { workspace = true }

# Terminal utilities (crossterm for ink TUI)
crossterm = { workspace = true }

# Diff rendering
similar = "3.1"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Text wrapping
textwrap = "0.16.2"

# Flexbox layout for ink TUI

# Lua scripting (for lua_view)
mlua = { workspace = true }

# TOML serialization (for workspace.toml)
toml = { workspace = true }

[dev-dependencies]
# MCP client for testing examples
rmcp = { version = "1.4", features = ["client", "transport-child-process"] }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
toml = { workspace = true }
blake3 = "1.8"  # For hash verification tests
serial_test = "3.3"  # For preventing parallel test execution with shared env vars
scopeguard = "1.2"  # For RAII-style cleanup in tests
insta = { version = "1.47", features = ["filters"] }  # Snapshot testing for TUI
expectrl = { workspace = true }  # PTY-based TUI testing
vt100 = "0.15"  # Terminal emulation for queryable screen buffer in E2E tests
proptest = "1.11"  # Property-based testing for graduation invariants
test-case = "3.3"  # Parameterized tests

# Unix-only resource constraint testing
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31", features = ["fs", "signal"] }

# File locking for concurrent test serialization
fs2 = "0.4"
