[package]
name = "crucible-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Note: Removed crucible-core dependency to avoid circular dependency
# Config should be the foundation, not depend on core
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tempfile = { workspace = true, optional = true }
schemars = { workspace = true }
num_cpus = "1.16"
sysinfo = "0.30"
dirs = "5.0"

[features]
default = ["yaml"]
yaml = ["serde_yaml"]
toml = ["dep:toml"]
test-utils = ["tempfile"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
futures = "0.3"
toml = "0.9"