[package]
name = "crucible-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Note: Removed crucible-core dependency to avoid circular dependency
# Config should be the foundation, not depend on core
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tempfile = { workspace = true, optional = true }
schemars = { workspace = true }
num_cpus = "1.17"
dirs = "6.0"
keyring = { version = "3.6", optional = true }

[features]
default = ["yaml", "toml"]
yaml = ["serde_yaml"]
toml = ["dep:toml"]
keyring = ["dep:keyring"]
test-utils = ["tempfile"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
futures = "0.3"
toml = "0.9"
serial_test = "3.3"
