[package]
name = "crucible-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Core existing dependencies
yrs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
pulldown-cmark = { workspace = true }
num_cpus = "1.16"
# Hashing dependencies
blake3 = "1.0"
hex = "0.4"
sha2 = "0.10"
tempfile = { workspace = true }

# Enhanced async runtime
tokio = { workspace = true, features = ["full", "tracing"] }

# Parser dependency (now separate crate with dependency inversion)
crucible-parser = { workspace = true }

# NOTE: crucible-enrichment dependency REMOVED to break circular dependency
# Core only defines EmbeddingProvider trait; enrichment crate provides implementation
# Higher-level crates (CLI, Tauri) use both as needed

# NOTE: crucible-surrealdb dependency REMOVED to break circular dependency
# With Dependency Inversion, Core defines Storage trait, surrealdb implements it
# Higher-level crates (CLI, Tauri) inject the implementation

# Configuration management
config = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
notify = { workspace = true }

# Enhanced change detection dependencies
parking_lot = "0.12"
rayon = { version = "1.8", optional = true }
futures = "0.3"

[features]
default = ["core"]
core = []
orchestration = []
hot-reload = []
full = ["orchestration", "hot-reload"]
parallel-processing = ["rayon"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full"] }
tracing-subscriber = { workspace = true }
tempfile = "3.0"
serial_test = "3.0"

