[package]
name = "crucible-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Core existing dependencies
yrs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Hashing dependencies
blake3 = "1.8"
hex = "0.4"
sha2 = "0.10"
bitflags = "2.11"
tempfile = { workspace = true }

# Enhanced async runtime
tokio = { workspace = true, features = ["full", "tracing"] }

# Random ID generation
rand = { workspace = true }

# ACP schema types for mode/command definitions
agent-client-protocol-schema = "0.10.6"

# NOTE: crucible-parser dependency REMOVED - Dependency Inversion applied
# Core now defines parser traits/types; parser crate depends on core
# This breaks the circular dependency and follows SOLID principles

# EnrichedNote no longer includes merkle_tree to avoid the cycle
# NOTE: crucible-merkle dependency REMOVED - Would create circular dependency
# Core defines abstractions, merkle depends on core for parser types

# Configuration management (for enrichment config types)
crucible-config = { path = "../crucible-config" }

# NOTE: crucible-enrichment dependency REMOVED to break circular dependency
# Core only defines EmbeddingProvider trait; enrichment crate provides implementation
# Higher-level crates (CLI, Tauri) use both as needed

# NOTE: crucible-surrealdb dependency REMOVED to break circular dependency
# With Dependency Inversion, Core defines Storage trait, surrealdb implements it
# Higher-level crates (CLI, Tauri) inject the implementation

# File watching (used by processing module)
notify = { workspace = true }

# MCP types for tool abstraction (uses workspace version for consistency with rig)
rmcp = { workspace = true }

# Enhanced change detection dependencies
parking_lot = "0.12"
rayon = { version = "1.11", optional = true }
futures = "0.3"
glob-match = "0.2.1"

# HTTP client for scripting runtimes
reqwest = { workspace = true }

# Path discovery utilities
dirs = { workspace = true }
shellexpand = "3.1"

# Fuzzy matching for interactive search
nucleo-matcher = "0.3"

[features]
default = ["core"]
core = []
parallel-processing = ["rayon"]
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full"] }
tracing-subscriber = { workspace = true }
tempfile = "3.25"
serial_test = "3.3"

# Dev-kiln validation tests
walkdir = "2.5"
regex = { workspace = true }
crucible-parser = { path = "../crucible-parser" }

