[package]
name = "crucible-daemon-client"
version.workspace = true
edition.workspace = true
description = "Client library for Crucible daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Re-use protocol and lifecycle from daemon
crucible-daemon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
