[package]
name = "crucible-daemon"
version.workspace = true
edition.workspace = true
description = "Crucible session daemon"

[package.metadata.dist]
dist = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/crucible-v{ version }-{ target }.tar.gz"
bin-dir = "crucible-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
crucible-core = { path = "../crucible-core" }
crucible-config = { path = "../crucible-config" }

crucible-sqlite = { path = "../crucible-sqlite", optional = true }

crucible-lua = { path = "../crucible-lua", features = ["send"] }
crucible-acp = { path = "../crucible-acp" }
crucible-llm = { path = "../crucible-llm", default-features = false }
genai = "0.5"
async-stream = "0.3"
agent-client-protocol = "0.9.3"
gix = { version = "0.69", default-features = false, features = ["blocking-network-client"] }
mlua = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
globset = { workspace = true }
num_cpus = { workspace = true }
flume = { workspace = true }
scopeguard = "1"
once_cell = "1.21"
reqwest = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
blake3 = "1.8"
walkdir = "2.5"
sha2 = "0.10"
serde_yaml = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
rand = { workspace = true }

# Tools dependencies (absorbed from crucible-tools)
rmcp = { version = "0.13", features = ["macros", "server", "client", "transport-io", "transport-streamable-http-server", "transport-child-process", "transport-streamable-http-client-reqwest"] }
axum = "0.8"
schemars = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
urlencoding = { workspace = true }
oq = { workspace = true }
pathdiff = "0.2"
url = "2.5"
validator = { version = "0.20", features = ["derive"] }
grep = "0.4"
ignore = "0.4"

[features]
default = ["storage-sqlite"]

web = []

# Storage backend selection (mutually exclusive in practice)

storage-sqlite = ["dep:crucible-sqlite", "dep:rusqlite"]

# Test tier flags (see justfile for usage)
test-fixtures = []       # Tests using docs/ kiln or examples/test-kiln
test-slow = []           # Performance benchmarks and timing tests
test-utils = []

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }
mockito = { workspace = true }
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
