[package]
name = "crucible-daemon"
version.workspace = true
edition.workspace = true
description = "Crucible session daemon"

[package.metadata.dist]
dist = false


[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
# env-filter required by acp::tracing_utils (absorbed from crucible-acp)
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
crucible-core = { path = "../crucible-core", features = ["test-utils"] }

lancedb = { version = "0.27.2", default-features = false }
arrow-array = "57"
arrow-schema = "57"

crucible-lua = { path = "../crucible-lua", features = ["send"] }
genai = "0.6"
async-stream = "0.3"
# NOTE(crucible): `unstable_session_model` gates the session/set_model API
# (ModelInfo, SetSessionModelRequest, NewSessionResponse.models). It is an
# explicitly-unstable ACP feature — real claude-agent-acp implements it as
# `unstable_setSessionModel`. Re-verify model switching when bumping this crate.
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_model"] }
gix = { version = "0.85", default-features = false, features = ["blocking-network-client", "sha1"] }
mlua = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
globset = { workspace = true }
num_cpus = { workspace = true }
flume = { workspace = true }
once_cell = "1.21"
fs2 = "0.4"
reqwest = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
blake3 = "1.8"
walkdir = "2.5"
sha2 = "0.11"
hex = "0.4"
serde_yaml = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled", "vtab", "blob", "modern_sqlite"] }
rand = { workspace = true }

# Absorbed from crucible-sqlite
parking_lot = "0.12"
chumsky = "0.13"

# Absorbed from crucible-acp
similar = "3"

# Absorbed from crucible-llm (async-stream already present above)
gguf = "0.1"
shellexpand = "3.1"
fastembed = { version = "5.13", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls", "copy-dylibs"], optional = true }

# Tools dependencies (absorbed from crucible-tools)
rmcp = { version = "1.4", features = ["macros", "server", "client", "transport-io", "transport-streamable-http-server", "transport-child-process", "transport-streamable-http-client-reqwest"] }
axum = "0.8"
schemars = { workspace = true }
regex = { workspace = true }
oq = { workspace = true }
grep = "0.4"
ignore = "0.4"

[features]
# fastembed on by default so embedding works out-of-box (matches prior crucible-llm default)
default = ["fastembed"]

web = []

# Test tier flags (see justfile for usage)
test-fixtures = []       # Tests using docs/ kiln or examples/test-kiln
test-slow = []           # Performance benchmarks and timing tests
test-utils = []

# Absorbed from crucible-llm: FastEmbed local ONNX embeddings (pulls ort)
fastembed = ["dep:fastembed", "dep:ort"]
# Guarded local-model e2e tests (require GGUF models in ~/models/)
local-config = []
local-config-embedding = []

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }
mockito = { workspace = true }
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
encoding_rs = "0.8"
wiremock = { workspace = true }
insta = { version = "1", features = ["json"] }
# Absorbed from crucible-acp
which = "8.0"
proptest = { workspace = true }
# Absorbed from crucible-llm dev-deps
criterion = { workspace = true, features = ["html_reports"] }
serial_test = "3.3"
toon-format = "0.5"
futures-util = { workspace = true }

# LLM embedding benchmark absorbed from crucible-llm
[[bench]]
name = "llm_embedding_comparison"
harness = false

# ACP integration harness (multiple sub-tests under one binary)
[[test]]
name = "acp_integration"
path = "tests/acp_integration/mod.rs"
harness = true

# Mock agent binary used by ACP integration tests
[[bin]]
name = "mock-acp-agent"
path = "tests/bin/mock-acp-agent.rs"
required-features = ["test-utils"]
test = false

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.cargo-machete]
# ort is never imported directly but pins the ONNX Runtime version/features
# (download-binaries, copy-dylibs) that fastembed needs at link time.
ignored = ["ort"]
