[package]
name = "crucible-desktop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Native desktop chat interface for Crucible using GPUI"

[[bin]]
name = "cru-desktop"
path = "src/main.rs"

[dependencies]
# GPUI framework (Apache-2.0)
gpui = "0.2"
gpui-component = "0.4"

# Workspace crates
crucible-core = { workspace = true }
crucible-llm = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
