[package]
name = "crucible-enrichment"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Enrichment layer for Crucible - embeddings, metadata extraction, and relation inference"

[lib]
name = "crucible_enrichment"
path = "src/lib.rs"

[dependencies]
# Core types and traits
crucible-core = { path = "../crucible-core" }
crucible-parser = { path = "../crucible-parser" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Time
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }

# System info
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
