[package]
name = "crucible-enrichment"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Enrichment layer for Crucible - thin re-export shim (types moved to crucible-daemon)"

[lib]
name = "crucible_enrichment"
path = "src/lib.rs"

[dependencies]
# Thin shim: re-exports from crucible-daemon::enrichment
crucible-daemon = { path = "../crucible-daemon" }
