[package]
name = "crucible-grammar"
version = "0.1.0"
edition = "2021"
description = "Grammar-constrained generation for tool calling"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Timing
chrono = { workspace = true }

# Local dependencies (for tool execution)
crucible-core = { workspace = true }
crucible-tools = { workspace = true }

# MCP protocol
rmcp = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
