[package]
name = "crucible-just"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Parse justfiles and generate MCP tool definitions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio-test = { workspace = true }
