[package]
name = "crucible-lance"
version = "0.1.0"
edition = "2021"
description = "LanceDB integration for Crucible lightweight storage mode"

[dependencies]
crucible-core = { path = "../crucible-core" }
lancedb = { version = "0.22.3", default-features = false }
arrow-array = "56"
arrow-schema = "56"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
