[package]
name = "crucible-lance"
version = "0.1.0"
edition = "2021"
description = "LanceDB integration for Crucible lightweight storage mode"

[dependencies]
crucible-core = { path = "../crucible-core" }
lancedb = { version = "0.26.2", default-features = false }
arrow-array = "57"
arrow-schema = "57"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
test-utils = []
