[package]
name = "crucible-lua"
version = "0.1.0"
edition = "2021"
description = "Luau scripting runtime for Crucible with type-based schema extraction"
license = "MIT"
authors = ["Crucible Contributors"]

[features]
default = ["fennel"]
fennel = []  # Bundle Fennel compiler (~160KB)
send = ["mlua/send"]  # Enable Send+Sync for multi-threaded use

[dependencies]
# Runtime: Luau (Lua with gradual types)
mlua = { version = "0.11", features = ["luau", "vendored", "async", "serialize"] }

# Static analysis: Parse Luau to extract type annotations
full_moon = { version = "2", features = ["luau"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt", "process"] }
regex = "1"
glob = "0.3"

# Shared types with core
crucible-core = { path = "../crucible-core" }

# TOON query for multi-format support
oq = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
